# pretraining-bench

./: .gitignore  CLAUDE.md  README.md  REPORT.md  pyproject.toml
claude/agents/: ai-training-performance-expert.md  code-reviewer.md  hpc-ai-developer.md  platform-tester.md
configs/: model_configs.yaml
scripts/: run_full_sweep.sh  run_multi_gpu.sh  run_single_gpu.sh  setup_venv.sh  validate.sh
scripts/lib/: env_setup.sh
scripts/slurm/: aarch64.sbatch  jakku.sbatch
src/: __init__.py  benchmark.py  data.py  distributed.py  metrics.py  model.py  precision.py  report.py  trainer.py
