[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "pretraining-bench"
version = "1.0.0"
description = "GPU benchmark for transformer pretraining using NVIDIA TransformerEngine"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.5.0",
    "transformer_engine[pytorch]>=1.12",
    "pyyaml>=6.0",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]

[project.scripts]
te-bench = "src.benchmark:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
